# RoadBuddyZaloAIChallenge2025

./: .env.example  .gitignore  Dockerfile  README.md  environment.yml  predict.sh  predict_notebook.ipynb  pyproject.toml  requirements.txt  requirements_unsloth.txt  run_docker.sh  start_jupyter.sh
.github/: copilot-instructions.md
configs/: config.yaml  config_smolvlm.yaml  config_unsloth.yaml  config_unsloth_infer.yaml  config_unsloth_infer_docker.yaml  config_video_llama.yaml  config_videollama.yaml  config_videollama_kaggle.yaml  config_videollama_kaggle_2b.yaml
outputs/qwen3vl-2b/: submission_1114_235430.csv  submission_1115_002243.csv
outputs/qwen3vl-8b-signs/: submission_1119_082715.csv
outputs/qwen3vl-8b-signs-no-tuning/: submission_1119_093439.csv
outputs/qwen3vl-8b-thinking/: submission_1115_111610.csv  submission_1115_112416.csv  submission_1115_140220.csv
outputs/qwen3vl-8b-unfreeze-16bf/: submission_1117_101851.csv  submission_1117_101851_postprocessed.csv
outputs/qwen3vl-8b-unfreeze-vit/: submission_1116_114513.csv  (+1 more)
outputs/qwen3vl-8b-unfreeze-vit-larger-size/: submission_1116_223004.csv  submission_1118_085128.csv
scripts/: generate_reasoning.sh  generate_reasoning_sglang.sh  infer.sh  infer_kaggle.sh  infer_unsloth.sh  install.sh  install_sglang.sh  install_unsloth.sh  install_vllm.sh  postprocessing.sh  train.sh  update_sgl_kernel.sh
src/: data.py  generate_reasoning.py  generate_reasoning_sglang.py  generate_reasoning_unsloth.py  generate_reasoning_vllm.py  infer.py  post_process.py  reasoning_generating.py  train.py
(+7 files in other folders)
