[project]

name = "roadbuddyzaloaichallenge2025"
version = "0.1.0"
description = "Video-based question answering for Road Buddy Challenge (Zalo AI Challenge 2025)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"pandas",
	"scikit-learn",
	"matplotlib",
	"packaging",
	"ninja",
	"imageio",
	"imageio-ffmpeg",
	"torch==2.6.0",
	"torchvision==0.21.0",
	"transformers",
	"pyyaml",
	"accelerate",
	"decord==0.6.0",
	"moviepy==1.0.3",
	"ffmpeg-python",
	"setuptools>=80.9.0",
	"opencv-python",
	"pyarrow",
	"pysubs2",
	"python-dotenv",
]
